# LearnOS

client/: bun.lockb  index.html  package.json  tailwind.config.ts
client/src/: App.tsx  index.css
client/src/components/: Layout.tsx
client/src/components/charts/: ExplanationPanel.tsx  GanttChart.tsx  MetricsChart.tsx
client/src/components/forms/: AlgorithmConfig.tsx  ProcessForm.tsx
client/src/components/memory/: MemoryMetrics.tsx  MemoryTimeline.tsx  MemoryVisualization.tsx
client/src/components/results/: ResultsTable.tsx
client/src/components/terminal/: ProcessViewer.tsx  Terminal.tsx  TrapTableViewer.tsx
client/src/config/: api.ts
client/src/hooks/: useTerminal.ts
client/src/pages/: CPUScheduling.tsx  DiskScheduling.tsx  Index.tsx  MemoryManagement.tsx  NotFound.tsx
client/src/services/: api.ts  memoryApi.ts  terminalApi.ts
client/src/types/: memory.ts  scheduling.ts  terminal.ts
server/: pyproject.toml  requirements.txt  run.py
server/app/: main.py
server/app/endpoints/: cpu.py  memory.py  terminal.py
server/app/models/: cpu.model.py  cpu.py  memory.py  process.py  response.model.py  response.py
server/app/services/: cpu.py  memory.py  process_manager.py
