[tool]
name = "LearnOS Simulator"
version = "1.0.0"
description = "API for the OS Simulator"
authors = ["SLOK TULSYAN <sloktulsyan@gmail.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
httpx = "^0.19.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 5000 --reload"